# alloydflanagan_wag

./: .dockerignore  .editorconfig  .gitignore  CLAUDE.md  Dockerfile  Makefile  PROMPTS.md  Procfile  README.md  context.Dockerfile  docker-compose.yml  figma_ready_component_list_consulting_developer_site.md  find.sh  fly.toml  grep_files  manage.py  mise.toml  pyproject.toml  requirements.dev.in  requirements.dev.txt  requirements.in  requirements.txt
app/: .dir-locals.el  .gitignore  .pnp.cjs  .prettierignore  .prettierrc  .stylelintignore  Makefile  manage.py  package-lock.json  package.json  pyproject.toml  requirements.dev.in  requirements.dev.txt  requirements.in  requirements.txt  stylelint.config.js  web.config  webpack.config.cjs  webpack.config.js
app/alloydflanagan/: middleware.py  urls.py  wsgi.py
app/alloydflanagan/about_me/: apps.py  urls.py  views.py
app/alloydflanagan/about_me/src/: about_section.js
app/alloydflanagan/blog/: apps.py  models.py  views.py
app/alloydflanagan/blog/migrations/: 0001_initial.py  0002_blogindexpage_intro_blogpost_body_blogpost_intro_and_more.py  0003_alter_blogpost_intro.py  0004_alter_blogindexpage_intro.py
app/alloydflanagan/client/: index.js
app/alloydflanagan/client/less/: alloydflanagan.less
app/alloydflanagan/design_system/: apps.py  models.py  urls.py  views.py
app/alloydflanagan/home/: models.py  urls.py  views.py
app/alloydflanagan/home/blocks/: header.py  menu_link.py
app/alloydflanagan/home/migrations/: 0001_initial.py  0003_homepage_intro.py  0004_homepage_resume.py  0005_homepage_content.py  0006_homepage_header_alter_homepage_content.py  0007_multi_targets_for_menu_link.py  (+3 more)
app/alloydflanagan/search/: views.py
app/alloydflanagan/settings/: base.py  dev.py  production.py
app/alloydflanagan/src/: hero.js  index.js  menu_link.js  page_header.js  principles.js  unsplash_credit.js
app/alloydflanagan/static/: manifest.json
app/alloydflanagan/templates/: base.html  index.html
(+43 files in other folders)
