[project]
name = "alloydflanagan-wag"
version = "0.1.1"
description = "Personal web site for A. Lloyd Flanagan"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dj-database-url>=3.0.1",
    "django-debug-toolbar>=6.0.0",
    "django-htmx>=1.26.0",
    "django-redis>=6.0.0",
    "django-structlog>=10.0.0",
    "gunicorn>=23.0.0",
    "psycopg>=3.2.12",
    "wagtail>=7.1.2",
]

[dependency-groups]
dev = [
    "autotools-language-server>=0.0.22",
    "djhtml>=3.0.10",
    "isort>=7.0.0",
    "ruff>=0.14.2",
]

[tool.isort]
line_length = 120
known_django = "django"
known_wagtail = "wagtail"
sections = ["FUTURE","STDLIB","DJANGO","WAGTAIL","THIRDPARTY","FIRSTPARTY","LOCALFOLDER"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = "migrations"

[tool.ruff]
line-length = 120
exclude = ["migrations"]
